# on-galaxy

./: .gitignore  CMakeLists.txt  README.md  run.sh
.claude/: settings.local.json
outputs/: bh_error_log.txt  bh_error_vs_theta.csv  disk_bh_long_diagnostics.csv  disk_bh_long_log.txt  disk_diagnostics.csv  disk_direct_long_diagnostics.csv  disk_direct_long_log.txt  disk_fmm_p12_diagnostics.csv  disk_fmm_p4_diagnostics.csv  disk_fmm_p8_diagnostics.csv  disk_log.txt  fmm3d_operator_convergence.csv  fmm3d_solver_error.csv  fmm_error_vs_p.csv  fmm_gpu_error.csv  fmm_gpu_scaling.csv  fmm_operator_convergence.csv  ge3_direct_diagnostics.csv  ge3_direct_trajectory.csv  ge3_fmm_d3_p1_diagnostics.csv  ge3_fmm_d3_p1_trajectory.csv  ge3_fmm_d3_p2_diagnostics.csv  ge3_fmm_d3_p2_trajectory.csv  ge3_fmm_d3_p3_diagnostics.csv  ge3_fmm_d3_p3_trajectory.csv  ge3_fmm_d3_p4_diagnostics.csv  ge3_fmm_d3_p4_trajectory.csv  ge3_fmm_p4_diagnostics.csv  ge3_fmm_p4_trajectory.csv  ge3_fmm_p8_diagnostics.csv  ge3_fmm_p8_trajectory.csv  ge_bh_diagnostics.csv  ge_direct_diagnostics.csv  ge_fmm_p12_diagnostics.csv  ge_fmm_p4_diagnostics.csv  ge_fmm_p8_diagnostics.csv  gpu_scaling.csv  merge50k_dt01_coresep.csv  merge50k_dt01_energy.csv  merge50k_dt01_sep.csv  (+31 more)
python/: animate.py  animate3d.py  core_sep.py  merger_gate.py  plot_energy.py  plot_energy3d.py  plot_energy_compare.py  plot_energy_vs_p.py  plot_error_vs_theta.py  plot_fmm3d_convergence.py  plot_fmm_convergence.py  plot_merger.py  plot_scaling.py  plot_scaling3d.py  plot_scaling_gpu.py  render_galaxy.py
src/: BarnesHutSolver.hpp  Config.hpp  Diagnostics.hpp  DirectSolver.hpp  FMMSolver.hpp  FmmExpansions.hpp  ForceSolver.hpp  InitialConditions.hpp  Integrator.hpp  Kernel.hpp  Types.hpp  fmm_tests.cpp  harness.cpp  main.cpp
src3d/: AdaptiveFMM3D.hpp  AdaptiveOctree.hpp  BarnesHut3D.hpp  Config3D.hpp  Diagnostics3D.hpp  DirectSolver3D.hpp  FMM3D.hpp  FmmExpansions3D.hpp  ForceSolver3D.hpp  InitialConditions3D.hpp  Integrator3D.hpp  Kernel3D.hpp  Types3D.hpp  Vec3.hpp  adaptive_tests.cpp  fmm3d_tests.cpp  harness3d.cpp  main3d.cpp
src3d/gpu/: AdaptiveFMM3DGPU.cu  AdaptiveFMM3DGPU.cuh  FMM3DGPU.cu  FMM3DGPU.cuh  FmmDevice3D.cuh  GalaxyIC.hpp  GpuOctree.hpp  adaptive_gpu_harness.cu  fmm_gpu_harness.cu  galaxy_sim.cu  gpu_direct.cu  gpu_direct.cuh  gpu_harness.cu
